Update Introduction to Social Network Analysis using igraph.ipynb

--- a/Introduction to Social Network Analysis using igraph.ipynb
+++ b/Introduction to Social Network Analysis using igraph.ipynb
@@ -27,6 +27,16 @@
     "http://igraph.org/r/"
    ]
   },
+    {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First of all, we need to import the igraph library\n",
+    "library(igraph)"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
