Update Exercise for plotting and analyzing social networks.ipynb

--- a/Exercise for plotting and analyzing social networks.ipynb
+++ b/Exercise for plotting and analyzing social networks.ipynb
@@ -197,6 +197,22 @@
     "plot(net, edge.arrow.size= 0.5)"
    ]
   },
+    {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legend("topleft",
+       legend = c("married","has affair with", "has crush on", "friends with"),
+       col = c("red4","mediumvioletred","lightpink","lightblue3"),
+       pch = 15,
+       bty = "n",
+       pt.cex = 2.5,
+       cex = 1.4 , 
+       text.col = "black",
+       horiz = FALSE)"]
+  }
   {
    "cell_type": "markdown",
    "metadata": {},
