--- a/Generation Models for artificial Social Networks.ipynb
+++ b/Generation Models for artificial Social Networks.ipynb
@@ -334,7 +334,7 @@
     "        }\n",
     "        \n",
     "        # Now, we are calculating the probability of forming new connections to existing nodes in the network. We get a vector of probabilites\n",
-    "        EdgeFormProb <- degree(network)/sum(degree(network))\n",
+    "        # EdgeFormProb <- degree(network)/sum(degree(network))\n",
     "        \n",
     "        # We are using a roulette wheel selection approach by repeating node names as many times as their degree and then sample m times\n",
     "        # with replacement from the resulting vector\n",
@@ -516,7 +516,7 @@
    "outputs": [],
    "source": [
     "# generating a graph\n",
-    "g <- sample_pa(100, directed = FALSE)\n",
+    "g <- sample_pa(100,m = 2, directed = FALSE)\n",
     "set.seed(123)\n",
     "plot(g)"
    ]
@@ -835,7 +835,7 @@
     "        EdgeFormProb <- round(EdgeFormProb,3)\n",
     "        \n",
     "        set.seed(123)\n",
-    "        plot(net2 + vertex(\"Bob\") + edge(\"Bob\",\"Fran\",\"Bob\",\"Johanna\",\"Bob\",\"Cindy\",\"Bob\",\"Olga\",\"Bob\",\"Liza\"),\n",
+    "        plot(net2 + vertex(\"Bob\") + edge(\"Bob\",\"Johanna\",\"Bob\",\"Fran\",\"Bob\",\"Cindy\",\"Bob\",\"Olga\",\"Bob\",\"Liza\"),\n",
     "             vertex.color = c(V(net2)$group,\"black\"),\n",
     "             vertex.label.color = \"red\",\n",
     "             vertex.size = 30,\n",
@@ -854,7 +854,7 @@
    "source": [
     "# now we can play around with different values of h and see how the edge formation probabilities change for\n",
     "# different values of h when adding a new node to the network.\n",
-    "TryOutH(1)\n",
+    "TryOutH(0.5)\n",
     "\n",
     "# Do you notice something special about the value of h = 0.5?"
    ]
